<resources>
    <string name="app_name">SmartHome</string>
    <string name="text_add_btn">Add</string>
    <string name="text_activity_main_item_setting">Setting URL</string>
    <string name="text_hind_edt_url">Url…</string>
    <string name="text_hind_edt_name_key_param">Key param…</string>
    <string name="text_hind_edt_key">Key…</string>
    <string name="text_btn_alert_dialog_set">Set</string>
    <string name="text_hind_edt_url_addition_path">Addition path…</string>
    <string name="text_fragment_id">Id…</string>
    <string name="text_fragment_name">Name…</string>
    <string name="text_fragment_pin">Pin…</string>
    <string name="text_example_json">Example of JSON for controller</string>
    <string name="text_btn_add_new_view">Add View</string>
    <string name="text_activity_main_item_add_new_view">Add view</string>
    <string name="text_fragment_interval">Interval…</string>
    <string name="text_al_edit_text">Edit</string>
    <string name="text_al_remove_view">Remove</string>
    <string name="text_editor_views_btn_apply">Apply</string>
    <string name="text_hind_edt_url_path_to_hash_sum">Path to hashSum…</string>
    <string name="error_of_server">Error of server CODE:</string>
    <string name="restart_app">Please restart the App for apply URL</string>
    <string name="wrong_url">Wrong URL!</string>
    <string name="pin_existed">This pin already exists!</string>
    <string name="pin_can_be_empty">Pin can\'t be empty!</string>
    <string name="button">Button</string>
    <string name="seek_bar">SeekBar</string>
    <string name="sensor">Sensor</string>

    <string-array name="name_icons">
        <item>lamp</item>
        <item>computer</item>
        <item>fan</item>
        <item>socket</item>
    </string-array>
</resources>
