<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">
    <EditText
            android:id="@+id/edt_alert_dialog_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hind_edt_url"
            android:inputType="textUri"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:id="@+id/edt_alert_dialog_name_key_param"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/text_hind_edt_name_key_param"/>
        <EditText
                android:id="@+id/edt_alert_dialog_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/text_hind_edt_key"/>
    </LinearLayout>
    <Button
            android:id="@+id/btn_alert_dialog_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_alert_dialog_set"/>

</LinearLayout>