<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp">
        <Button
                      android:id="@+id/btn_example"
                      style="@style/view_buttons"
                      android:background="@drawable/lamp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
        <EditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_fragment_id"
                android:inputType="number"/>
        <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_fragment_name"
                android:inputType="text"/>
        <EditText
                android:id="@+id/edt_pin_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_fragment_pin"
                android:inputType="number"/>
        <Spinner
                android:id="@+id/sp_image_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/background_head"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_example_json"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>
        <TextView
                android:id="@+id/tv_example_json"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>
    </LinearLayout>
    <Button
            android:id="@+id/btn_add_new_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_head"
            android:textColor="@color/white"
            android:text="@string/text_btn_add_new_view"/>
    </LinearLayout>
</ScrollView>